# common-funding-application

./: .buildpacks  .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  :w  Dockerfile  Pipfile  Procfile  README.md  cfa  django.wsgi  import_demo.py  import_questions.py  manage.py  package.json  pyproject.toml  requirements.txt  sandbox_config.py_default  settings.py  setup.cfg  test.json  tox.ini  urls.py
.circleci/: config.yml
.github/cdk/: main.ts
.github/workflows/: build-and-deploy.yaml  cdkactions_build-and-deploy.yaml
apache/: django.wsgi  wsgi.py
app/: admin.py  forms.py  forms.py~  helpers.py  helpers.py~  models.py  tests.py  urls.py  views.py
app/fixtures/: cfausers.json  event_edit.json  events.json
app/migrations/: 0001_initial.py  0002_FUNDER_NAME.py  0002_advisor_email_and_number_not_required.py  0002_auto_20160629_1552.py  0002_test_south_1.py  0003_FUNDER_NAME.py  0003_admission_fee_removed_from_event.py  0003_auto_20161003_1714.py  0003_testing_south_2.py  0004_add_contact_name_to_events.py  0004_auto_20170105_1426.py  0004_testing_south_1.py  0005_add_created_at_to_event.py  0005_auto_20171225_1441.py  0005_update_models.py  0006_add_updated_at_to_event.py  0006_auto_20190407_1247.py  0007_cfauser_email_subject.py  0008_cfauser_phone.py  0009_migrate_to_BigAutoField_as_default.py
app/static/: Cakefile  applist.html  base-page.html  eligible-funders.html  event-edit.html  events.html  (+9 more)
cron/: checkevents.py
k8s/: main.ts  values.yaml
login/: urls.py  views.py
media/: index1.html  questionnaire.html
penncfa/: asgi.py  urls.py  wsgi.py
scripts/: asgi-run  django-run
templates/: base-page.html  base.html  pdf.html
(+156 files in other folders)
