[project]
name = "common-funding-application"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url",
    "Django",
    "django-extensions",
    "django-registration",
    "psycopg2",
    "raven",
    "uwsgi",
    "uvicorn[standard]",
    "gunicorn",
    "ruff>=0.9.7",
    "pre-commit>=4.1.0",
]

[dependency-groups]
dev = [
    "codecov",
    "unittest-xml-reporting",
    "tblib",
    "django>=5.1.6",
]

