[project]
name = "common-funding-application"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url",
    "Django",
    "django-extensions",
    "django-registration",
    "psycopg2",
    "raven",
    "uwsgi",
    "uvicorn[standard]",
    "gunicorn",
    "ruff>=0.9.7",
    "pre-commit>=4.1.0",
]

[dependency-groups]
dev = [
    "codecov",
    "unittest-xml-reporting",
    "tblib",
    "django>=5.1.6",
]

[tool.ruff]
exclude = [".venv", "migrations"]
line-length = 88

[tool.ruff.lint]
ignore = ["E203"]
select = [
    "E",
    "F",
    "Q",
    "W",
    "I",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["pennclubs", "clubs"]
lines-after-imports = 2
